// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connectMenu routing getWidgetSearchParameters should add the refinements according to the UI state provided 1`] = `
SearchParameters {
  "advancedSyntax": undefined,
  "allowTyposOnNumericTokens": undefined,
  "analytics": undefined,
  "analyticsTags": undefined,
  "aroundLatLng": undefined,
  "aroundLatLngViaIP": undefined,
  "aroundPrecision": undefined,
  "aroundRadius": undefined,
  "attributesToHighlight": undefined,
  "attributesToRetrieve": undefined,
  "attributesToSnippet": undefined,
  "disableExactOnAttributes": undefined,
  "disjunctiveFacets": Array [],
  "disjunctiveFacetsRefinements": Object {},
  "distinct": undefined,
  "enableExactOnSingleWordQuery": undefined,
  "facets": Array [],
  "facetsExcludes": Object {},
  "facetsRefinements": Object {},
  "getRankingInfo": undefined,
  "hierarchicalFacets": Array [
    Object {
      "attributes": Array [
        "category",
      ],
      "name": "category",
    },
  ],
  "hierarchicalFacetsRefinements": Object {
    "category": Array [
      "pants",
    ],
  },
  "highlightPostTag": undefined,
  "highlightPreTag": undefined,
  "hitsPerPage": undefined,
  "ignorePlurals": undefined,
  "index": "",
  "insideBoundingBox": undefined,
  "insidePolygon": undefined,
  "length": undefined,
  "maxValuesPerFacet": 10,
  "minProximity": undefined,
  "minWordSizefor1Typo": undefined,
  "minWordSizefor2Typos": undefined,
  "minimumAroundRadius": undefined,
  "numericFilters": undefined,
  "numericRefinements": Object {},
  "offset": undefined,
  "optionalFacetFilters": undefined,
  "optionalTagFilters": undefined,
  "optionalWords": undefined,
  "page": 0,
  "query": "",
  "queryType": undefined,
  "removeWordsIfNoResults": undefined,
  "replaceSynonymsInHighlight": undefined,
  "restrictSearchableAttributes": undefined,
  "snippetEllipsisText": undefined,
  "synonyms": undefined,
  "tagFilters": undefined,
  "tagRefinements": Array [],
  "typoTolerance": undefined,
}
`;

exports[`connectMenu routing getWidgetState should add an entry equal to the refinement 1`] = `
Object {
  "menu": Object {
    "category": "pants",
  },
}
`;

exports[`connectMenu routing getWidgetState should not override other values in the same namespace 1`] = `
Object {
  "menu": Object {
    "category": "pants",
    "othercategory": "not-pants",
  },
}
`;
